--- a/menuBytesKitchen/app/src/main/AndroidManifest.xml
+++ b/menuBytesKitchen/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:name=".MainActivity"
             android:screenOrientation="landscape"/>
         <activity android:name=".IntroActivity"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
